--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,26 +6,18 @@
     <title>Login - Hackster Password Manager</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#007bff">
+<meta name="theme-color" content="#007bff">
 </head>
 <body>
     <div class="container">
         <h1>Hackster Password Manager</h1>
-        <form id="login-form" action="dashboard.html">
+        <form id="login-form">
             <label for="email">Email:</label>
             <input type="email" id="email" required>
             <label for="password">Password:</label>
             <input type="password" id="password" required>
             <button type="submit">Login</button>
         </form>
-        <!-- Example navigation links -->
-        <nav>
-            <ul>
-                <li><a href="dashboard.html">Dashboard</a></li>
-                <li><a href="password.html">Password Page</a></li>
-                <li><a href="add-application.html">Add Application</a></li>
-            </ul>
-        </nav>
     </div>
     <script src="scripts.js"></script>
 </body>
